--- a/src/Component/Hero.css
+++ b/src/Component/Hero.css
@@ -4,13 +4,12 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: 80vh;
-  width: 80%;
+  height: 100vh;
+  width: 90%;
   margin: auto;
 }
 .hero-name {
-  margin-top: 0;
-  font-size: 8rem;
+  font-size: 7rem;
   font-family: "Indie Flower", cursive;
   text-align: center;
   color: #000000;
@@ -18,6 +17,7 @@
   animation-duration: 1s; /* Adjust the duration as needed */
   animation-fill-mode: both;
   animation-delay: 1s;
+  margin-bottom: 7rem;
 }
 
 @keyframes fadeIn {
