--- a/src/Component/Projects.css
+++ b/src/Component/Projects.css
@@ -1,5 +1,5 @@
 img {
-  width: 250px;
+  width: 300px;
   height: 300px;
   cursor: pointer;
   transition: all 0.3s;
@@ -25,4 +25,11 @@ h1 {
 .title a {
   color: black;
   text-decoration: none;
+  font-family: "Indie Flower", cursive;
+}
+.col {
+  margin: 1rem;
+}
+p {
+  font-family: "Indie Flower", cursive;
 }
