--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-body {
+.body {
   margin: 0;
   border-radius: 0;
   scroll-behavior: smooth;
+  background: linear-gradient(to right, #64aeef97, #691d025e);
+  font-family: "IBM Plex Serif", serif;
+}
+p {
+  font-size: 2rem;
+  font-family: sans-serif;
 }
