--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -1,7 +1,10 @@
 i {
-  color: black;
+  color: rgba(0, 0, 0, 0.778);
   transition: all 0.3 ease;
 }
 i:hover {
-  transform: scale(1.5);
+  transform: scale(1.1);
+  color: rgba(20, 140, 200, 0.886);
+}
+.phone {
 }
